tests/baselines/reference/parserSkippedTokens15.errors.txt
parserSkippedTokens15.ts(2,1): error TS1127: Invalid character.
parserSkippedTokens15.ts(3,1): error TS1127: Invalid character.


==== parserSkippedTokens15.ts (2 errors) ====
    /*existing trivia*/
    \
    
!!! error TS1127: Invalid character.
    \
    
!!! error TS1127: Invalid character.
    ;